--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,5 +52,4 @@ mybatis-plus:
     db-config:
       id-type: ASSIGN_ID
 reggie:
-  #path: /usr/local/img/
-  path: /D:/img/
+  path: /usr/local/img/
